--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.12",
+    "@supabase/supabase-js": "^2.0.0",
     "classnames": "^2.3.2",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-textarea-autosize": "^8.3.4"
+    "react-textarea-autosize": "^8.3.4",
+    "recoil": "^0.7.6"
   },
   "devDependencies": {
     "@types/node": "^18.8.4",
