--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.12",
+    "@monaco-editor/react": "^4.4.6",
     "@supabase/supabase-js": "^2.0.0",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.5",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -19,6 +21,7 @@
     "recoil": "^0.7.6"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.7",
     "@types/node": "^18.8.4",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
