--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.12",
     "@monaco-editor/react": "^4.4.6",
+    "@sentry/nextjs": "^7.16.0",
     "@slack/web-api": "^6.7.2",
     "@supabase/supabase-js": "^2.0.0",
     "classnames": "^2.3.2",
