--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@charkour/react-reactions": "^0.11.0",
     "@heroicons/react": "^2.0.12",
     "@monaco-editor/react": "^4.4.6",
     "@sentry/nextjs": "^7.16.0",
@@ -32,7 +33,7 @@
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.17",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^3.2.1",
     "typescript": "^4.8.4"
   }
 }
