--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@supabase/supabase-js": "^2.0.4",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.5",
+    "linkify-react": "^4.0.2",
+    "linkifyjs": "^4.0.2",
     "next": "12.3.1",
     "next-sitemap": "^3.1.29",
     "react": "18.2.0",
