--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@monaco-editor/react": "^4.4.6",
     "@sentry/nextjs": "^7.16.0",
     "@slack/web-api": "^6.7.2",
+    "@supabase/auth-helpers-nextjs": "^0.4.4",
+    "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.0.4",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.5",
+    "fuse.js": "^6.6.2",
     "linkifyjs": "^4.0.2",
     "next": "12.3.1",
     "next-sitemap": "^3.1.29",
