--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-dom": "18.2.0",
     "react-mentions": "^4.4.7",
     "react-textarea-autosize": "^8.3.4",
-    "recoil": "^0.7.6"
+    "recoil": "^0.7.6",
+    "url-metadata": "^2.5.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
