--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "12.3.1",
     "next-sitemap": "^3.1.29",
     "react": "18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-mentions": "^4.4.7",
     "react-textarea-autosize": "^8.3.4",
@@ -34,6 +35,7 @@
     "@tailwindcss/typography": "^0.5.7",
     "@types/node": "^18.8.4",
     "@types/react": "^18.0.21",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "^18.0.6",
     "@types/react-mentions": "^4.1.7",
     "autoprefixer": "^10.4.12",
