--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "linkifyjs": "^4.0.2",
     "next": "12.3.1",
     "next-sitemap": "^3.1.29",
+    "quill-emoji": "^0.2.0",
+    "quill-linkify": "^0.3.0",
+    "quill-mention": "^3.1.0",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
     "react-mentions": "^4.4.7",
+    "react-quill": "^2.0.0",
     "react-textarea-autosize": "^8.3.4",
     "recoil": "^0.7.6",
     "url-metadata": "^2.5.0"
