--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/auth-helpers-nextjs": "^0.4.4",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.0.4",
+    "cheerio": "^1.0.0-rc.12",
     "classnames": "^2.3.2",
     "dayjs": "^1.11.5",
     "next": "12.3.1",
@@ -27,7 +28,6 @@
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "18.2.0",
-    "react-mentions": "^4.4.7",
     "react-quill": "^2.0.0",
     "recoil": "^0.7.6",
     "url-metadata": "^2.5.0"
@@ -38,7 +38,6 @@
     "@types/react": "^18.0.21",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "^18.0.6",
-    "@types/react-mentions": "^4.1.7",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.17",
     "prettier-plugin-tailwindcss": "^0.1.13",
