vue, svelte 언어 추가

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "postbuild": "next-sitemap",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "update-types": "supabase gen types typescript --db-url postgres://postgres:dwrlafelix34%67@db.xsafexolrozevmdgygbn.supabase.co:6543/postgres > ./types/index.d.ts"
   },
   "dependencies": {
     "@heroicons/react": "^2.0.12",
