--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "quill-mention": "^3.1.0",
     "react": "18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "18.2.0",
     "react-quill": "^2.0.0",
     "recoil": "^0.7.6",
@@ -38,6 +39,7 @@
     "@types/node": "^18.8.4",
     "@types/react": "^18.0.21",
     "@types/react-copy-to-clipboard": "^5.0.4",
+    "@types/react-detect-offline": "^2.4.1",
     "@types/react-dom": "^18.0.6",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.17",
