--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "classnames": "^2.3.2",
     "dayjs": "^1.11.5",
     "fuse.js": "^6.6.2",
+    "lodash.isequal": "^4.5.0",
     "next": "12.3.1",
     "next-sitemap": "^3.1.29",
     "quill-emoji": "^0.2.0",
@@ -36,6 +37,7 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
+    "@types/lodash.isequal": "^4.5.6",
     "@types/node": "^18.8.4",
     "@types/react": "^18.0.21",
     "@types/react-copy-to-clipboard": "^5.0.4",
