--- a/package.json
+++ b/package.json
@@ -21,26 +21,26 @@
     "classnames": "^2.3.2",
     "dayjs": "^1.11.5",
     "fuse.js": "^6.6.2",
-    "next": "12.3.1",
+    "next": "^13.0.7",
     "next-sitemap": "^3.1.29",
     "quill-emoji": "^0.2.0",
     "quill-linkify": "^0.3.0",
     "quill-mention": "^3.1.0",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-detect-offline": "^2.4.5",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-quill": "^2.0.0",
     "recoil": "^0.7.6",
     "url-metadata": "^2.5.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.7",
-    "@types/node": "^18.8.4",
-    "@types/react": "^18.0.21",
+    "@types/node": "^18.11.17",
+    "@types/react": "^18.0.26",
     "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-detect-offline": "^2.4.1",
-    "@types/react-dom": "^18.0.6",
+    "@types/react-dom": "^18.0.9",
     "autoprefixer": "^10.4.12",
     "postcss": "^8.4.17",
     "prettier-plugin-tailwindcss": "^0.1.13",
