--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "quill-linkify": "^0.3.0",
     "quill-mention": "^3.1.0",
     "react": "^18.2.0",
+    "react-activity-calendar": "^1.7.0",
     "react-copy-to-clipboard": "^5.1.0",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
     "react-github-btn": "^1.4.0",
     "react-quill": "^2.0.0",
+    "react-tooltip": "^4.5.1",
     "recoil": "^0.7.6",
     "url-metadata": "^2.5.0"
   },
