--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "fuse.js": "^6.6.2",
     "next": "^13.0.7",
     "next-sitemap": "^3.1.29",
+    "next-themes": "^0.2.1",
     "quill-emoji": "^0.2.0",
     "quill-linkify": "^0.3.0",
     "quill-mention": "^3.1.0",
